微信场景的完成

--- a/weixone/src/index.html
+++ b/weixone/src/index.html
@@ -46,7 +46,7 @@
         </article>
         <article class="swiper-slide box2">
             <!--character-->
-            <div class="box2-acter ani" swiper-animate-effect="slideInUp" swiper-animate-duration="0.4s" swiper-animate-delay="0.5s">
+            <div class="box2-acter ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.4s" swiper-animate-delay="0.5s">
                 <img src="images/box2acter.png" alt="">
             </div>
             <!--box2-redBj-->
@@ -81,81 +81,215 @@
         </article>
         <article class="swiper-slide box3">
             <!--bj1-->
-            <div class="box3-bj1">
+            <div class="box3-bj1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.5s" >
                 <img src="images/box3-bj-1.png" alt="">
             </div>
-            <div class="box3-bj2">
+            <div class="box3-bj2 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
                 <img src="images/box3-bj-2.png" alt="">
             </div>
-            <div class="box3-bj3">
+            <div class="box3-bj3 ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="4.5s">
                 <img src="images/box3-bj-3.png" alt="">
             </div>
-            <div class="box3-bj4">
+            <div class="box3-bj4 ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
                 <img src="images/box3-bj-4.png" alt="">
             </div>
-            <div class="box3-bj5">
+            <div class="box3-bj5 ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                 <img src="images/box3-bj-5.png" alt="">
             </div>
-            <div class="box3-text1">
+            <div class="box3-text1 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
                 <span>理财能手</span>
             </div>
-            <div class="box3-text2">
+            <div class="box3-text2 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
                 <span>招聘职位</span>
             </div>
-            <div class="box3-stars-1">
+            <div class="box3-stars-1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                <img src="images/box3-stars.png" >
+            </div>
+            <div class="box3-stars-2 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="2s">
                 <img src="images/box3-stars.png" alt="">
             </div>
-            <div class="box3-stars-2">
+            <div class="box3-stars-3 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="2.5s" >
                 <img src="images/box3-stars.png" alt="">
             </div>
-            <div class="box3-stars-3">
-                <img src="images/box3-stars.png" alt="">
-            </div>
-            <div class="box3-li-1">
+            <div class="box3-li-1 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="2s" >
                 <span>职位要求内容</span>
             </div>
-            <div class="box3-li-2">
+            <div class="box3-li-2 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
                 <span>职位要求内容</span>
             </div>
-            <div class="box3-li-3">
+            <div class="box3-li-3 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="3s">
                 <span>职位要求内容</span>
             </div>
         </article>
         <article class="swiper-slide box4">
-            <div class="box4-acter absolu">
+            <div class="box4-acter absolu ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
                 <img src="images/box4-bj1.png" alt="">
             </div>
-            <div class="box4-bj2 absolu">
+            <div class="box4-bj2 absolu ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                 <img src="images/box4-bj2.png" alt="">
             </div>
-            <div class="box4-bj3 absolu">
+            <div class="box4-bj3 absolu ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                 <img src="images/box4-bj3.png" alt="">
             </div>
-            <div class="box4-bj4 absolu">
+            <div class="box4-bj4 absolu ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="4.5s">
                 <img src="images/box3-bj-3.png" alt="">
             </div>
-            <div class="box4-ul absolu">
+            <div class="box4-ul absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="3.5s">
                 <span>招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容</span>
             </div>
-            <div class="box4-top-text absolu">
+            <div class="box4-top-text absolu ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                 <span>投资先锋</span>
             </div>
-            <div class="box4-bottom-text absolu">
+            <div class="box4-bottom-text absolu ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
                 <span>招聘岗位名称</span>
             </div>
         </article>
-        <article class="swiper-slide box5"></article>
-        <article class="swiper-slide box6"></article>
-        <article class="swiper-slide box7"></article>
-        <article class="swiper-slide box8"></article>
-        <article class="swiper-slide box9"></article>
+        <article class="swiper-slide box5">
+            <div class="box5_top_bj absolu ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+                <img src="images/box4-bj2.png" alt="">
+            </div>
+            <div class="box5-bj-right absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="3.5s">
+                <img src="images/box3-bj-3.png" alt="">
+            </div>
+            <div class="box5-acter absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="2s" swiper-animate-delay="1.5s">
+                <img src="images/box5-acter.png" alt="">
+            </div>
+            <div class="box5-ul absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
+                <span>招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容招聘内容</span>
+            </div>
+            <div class="box5-title absolu ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                <span>招聘岗位名称</span>
+            </div>
+        </article>
+        <article class="swiper-slide box6">
+            <div class="box6-border absolu ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+                <img src="images/box6bj.png" alt="">
+            </div>
+            <div class="box6-bj absolu ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+                <img src="images/box6-bj.png" alt="">
+            </div>
+            <div class="box6-acter absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
+                <img src="images/box6-acter.png" alt="">
+            </div>
+            <div class="box6-viedo absolu ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
+                <img src="images/box6-viedo.png" alt="">
+            </div>
+            <div class="box6-bj-center absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="3.5s">
+                <img src="images/box6-bj2.png" alt="">
+            </div>
+            <div class="box6-center-text absolu ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1s" swiper-animate-delay="4s">
+                <span>文 本 内 容</span>
+            </div>
+            <div class="box6-title absolu ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4.5s">
+                <span>身处多元的世界</span>
+            </div>
+            <div class="box6-content absolu ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="5s">
+                <span>每个人都是一个多元体</span>
+            </div>
+            <div class="box6-content rows_1 absolu ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="5.5s">
+                <span>正因如此</span>
+            </div>
+            <div class="box6-content rows_2 absolu ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="6s">
+                <span>我们不愿错过每一个</span>
+            </div>
+            <div class="box6-content rows_3 absolu ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="6.5s">
+                <span>拥有独立精神的你</span>
+            </div>
+        </article>
+        <article class="swiper-slide box7">
+            <div class="acter-left absolu ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                <img src="images/box7-acter-left.png" alt="">
+            </div>
+            <div class="acter-right absolu ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                <img src="images/box7-acter-right.png" alt="">
+            </div>
+            <div class="acter-center absolu ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                <img src="images/box7-acter-center.png" alt="">
+            </div>
+            <div class="box7-top-bj absolu ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+                <img src="images/box7-top-log.png" alt="">
+            </div>
+            <div class="box7-bottom-bip absolu ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4.5s">
+                <img src="images/box7-bottom-tip.png" alt="">
+            </div>
+            <div class="box7-bottom-bj absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="3.5s">
+                <img src="images/box7-bottom-bj.png" alt="">
+            </div>
+            <div class="box7-email absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="4.5s">
+                <span>电子邮箱：435751730@qq.com</span>
+            </div>
+            <div class="box7-logo absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="5.5s">
+                <span>logo</span>
+            </div>
+        </article>
+        <article class="swiper-slide box8">
+            <div class="b8-top-bj absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+                <img src="images/b8-top.png" alt="">
+            </div>
+            <div class="b8-bottom-log absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="2s">
+                <span>logo</span>
+            </div>
+            <div class="b9-form absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="1s" >
+                <form action="">
+                    <div class="form-input">
+                        <input type="text" placeholder="姓名">
+                    </div>
+                    <div class="form-input">
+                        <input type="text" placeholder="手机">
+                    </div>
+                    <div class="form-input">
+                        <input type="text" placeholder="专业">
+                    </div>
+                    <div class="form-input">
+                        <input type="text" placeholder="求职岗位">
+                    </div>
+                    <div class="form-input">
+                        <input type="text" placeholder="一句话介绍自己">
+                    </div>
+                    <div class="form-input">
+                        <input type="submit" class="input-sub" value="提交">
+                    </div>
+                </form>
+            </div>
+        </article>
+        <article class="swiper-slide box9">
+            <div class="b9-top-text absolu ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+                <span>关注我们</span>
+            </div>
+            <div class="b9-code absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="3.5s">
+                <img src="images/b9-code.png" alt="">
+            </div>
+            <div class="b9-acter-left absolu ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
+                <img src="images/b9-acter-left.png" alt="">
+            </div>
+            <div class="b9-acter-right absolu ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
+                <img src="images/b9-acter-right.png" alt="">
+            </div>
+            <div class="b9-center-text absolu ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="4.5s">
+                <span>长按识别二维码</span>
+            </div>
+            <div class="b9-number absolu ani" swiper-animate-effect="flipInX" swiper-animate-duration="1s" swiper-animate-delay="5.5s">
+                <img src="images/b9-number.png" alt="">
+            </div>
+            <div class="b9-qq absolu absolu ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="7.5s">
+                <img src="images/b9-qq.png" alt="">
+            </div>
+            <div class="b9-button absolu ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="7.5s">
+                <a href="javascript:void(0);">
+                    <button>一键拨号</button>
+                </a>
+            </div>
+        </article>
     </section>
     <!--feiy-->
     <section class="swiper-pagination"></section>
     <!--music-->
-    <div class="mymusic">
+    <div class="mymusic" id="mymusic">
+        <audio autoplay="autoplay" loop="loop">
+            <source src="music/audio.mp3"></source>
+        </audio>
         <div class="music-box">
-            <div class="music-bo">
+            <div class="music-bo start">
                 <img src="images/music.png" alt="">
             </div>
             <div class="music-bj"></div>
@@ -170,6 +304,7 @@
 <script type="text/javascript" src="../bower_components/animate.css/swiper.animate1.0.2.min.js"></script>
 <script type="text/javascript" src="../bower_components/swiper/dist/js/swiper.js"></script>
 <script>
+    var box = document.querySelector(".box1 .b1-box");
     var mySwiper = new Swiper ('.swiper-container', {
         direction: 'vertical',
         loop: true,
@@ -180,9 +315,17 @@
         },
         onSlideChangeEnd: function(swiper){
             swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
+            if(swiper.activeIndex==1){
+                setTimeout(function(){
+                    box.className="b1-box ani start";
+                },2500)
+            }else{
+                box.className="b1-box ani";
+            }
         }
 
     })
 </script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
